# indexmaker

./: README.md  licence.txt  nature_review2017_index.docx  output.docx  pyproject.toml
.github/: pdf2index.yml
.github/workflows/: indexmaker.yml  publish.yml
doc/: icon_for_Mac.txt
logo/: raw_logo.xcf  round_logo_moon.icns
src/indexmaker/: indexmaker.py  indexmaker_gui.py  indexmaker_gui.pyw  indexmaker_script.py
